# sciviewer-dev

./: .gitignore  Interactive Scatter Plot - Py5 Class.ipynb  Interactive Scatter Plot JN 20Jan2023.ipynb  README.md  pyproject.toml  sciviewer-dev-env.yml  scvelo Python architechture.ipynb
examples/: simple.ipynb
plotting/: sciviewer.py
scvelo/plotting/: __init__.py  sciviewer.py  sciviewerWelcome.py
src/sciviewer/: __init__.py  data.py  plotting.py  utils.py  viewer.py
src/sciviewer/ui/: button.py  buttons.py  interface.py  scatter.py  scroller.py  selectors.py  widget.py
test/: cube_test.ipynb  debug.ipynb
