[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sciviewer"
version = "0.0.5"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "Single-cell Viewer"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/colabobio/sciviewer-dev"
"Bug Tracker" = "https://github.com/colabobio/sciviewer-dev/issues"